@@ -2,6 +2,10 @@ CHANGES IN FLTK 1.1.7
 
 	- Documentation fixes (STR #648, STR #692, STR #730, STR
 	  #744, STR #745)
+	- Updated Fl_Tabs to check the contrast of the label
+	  color against the tab background, and to highlight the
+	  top 5 lines of the tab pane with the selection color so
+	  that selected tabs stand out more.
 	- The example programs can now compile separate from the
 	  FLTK source distribution (STR #809)
 	- The example programs are now installed with the
